--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Site settings
-title: Freelancer
-email: your-email@domain.com
-url: https://example.github.io
-description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-keywords: "your keywords, separated by commas"
-skills: "Web Developer - Graphic Artist - User Experience Designer"
-meta_author: LastName FirstName
+title: Anne Regel
+email: regel.ar@gmail.com
+url: https://mtchem.github.io
+description: "Data science, data visualization, and machine learning projects and tutorials."
+keywords: "data science, NLP, machine learning, data visualization, python"
+skills: "Data Science - Python - Machine Learning"
+meta_author: Regel Anne
 
 # Google webmaster tools
 google_verify:
@@ -40,20 +40,16 @@ footer:
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: twitter
-    url: http://twitter.com/jekyllrb
-  - title: facebook
-    url:
-  - title: stack-overflow
-    url: http://stackoverflow.com/questions/tagged/jekyll
-  - title: bitbucket
-    url: http://bitbucket.org/jekyll
+    url: http://twitter.com/RegelAr
+  - title: linkedin
+    url: https://www.linkedin.com/in/anne-regel-phd-2943a061/
   - title: github
-    url: http://github.com/jekyll
+    url: http://github.com/mtchem
 
 # Postal address (add as many lines as necessary)
 address:
-  - line: 3481 Melrose Place
-  - line: Beverly Hills, CA 90210
+  - line: Fort Collins
+  - line: Colorado, USA
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
